--- a/src/app/candidat/home/home.component.html
+++ b/src/app/candidat/home/home.component.html
@@ -41,7 +41,7 @@
         <div class="section-title text-center mb-60">
           <h4 class="wow fadeInUp" data-wow-delay=".4s">{{session.nom}}</h4>
           <div>&nbsp;</div>
-          <h5 class="mb-15 wow fadeInUp" data-wow-delay=".2s" style="color: #c0262d;">Candidature déjà enregistrée pour cette session d'examen</h5>
+          <h5 class="mb-15 wow fadeInUp" data-wow-delay=".2s" style="color: #c0262d;">Candidature déjà enregistrée pour cette session d'examen au nom de {{candidature.compte.name }} {{candidature.compte.prenom }}</h5>
 
         </div>
       </div>
