--- a/src/app/public/p-layout/p-layout.component.html
+++ b/src/app/public/p-layout/p-layout.component.html
@@ -1,7 +1,7 @@
 <!-- ========================= hero-section-wrapper-2 start ========================= -->
 
 <!-- ========================= header-2 start ========================= -->
-<section  class="hero-section-wrapper-2">
+<section class="hero-section-wrapper-2">
   <header class="header header-2">
     <div class="navbar-area">
       <div class="container">
@@ -11,7 +11,8 @@
               <a class="navbar-brand" href="index.html">
                 <img src="assets/img/LogoUcacIcamjpg.jpg" alt="Logo" />
               </a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent2" aria-controls="navbarSupportedContent2" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent2"
+                aria-controls="navbarSupportedContent2" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="toggler-icon"></span>
                 <span class="toggler-icon"></span>
                 <span class="toggler-icon"></span>
@@ -23,12 +24,12 @@
                     <a [routerLink]="['home']" [routerLinkActive]="['active']" class="page-scroll">Accueil</a>
                   </li>
                   <li class="nav-item">
-                    <a class="page-scroll"  [routerLink]="['auth/login']" >Inscription</a>
+                    <a class="page-scroll" [routerLink]="['auth/login']">Inscription</a>
                   </li>
                   <li class="nav-item">
-                    <a class="page-scroll" [routerLink]="['auth/login']"  >Résultats</a>
+                    <a class="page-scroll" [routerLink]="['auth/login']">Résultats</a>
                   </li>
-                  <a [routerLink]="['auth/login']"  class="button button-sm radius-10 d-none d-lg-flex">Connexion</a>
+                  <a [routerLink]="['auth/login']" class="button button-sm radius-10 d-none d-lg-flex">Connexion</a>
                 </ul>
 
               </div>
@@ -57,7 +58,8 @@
             <div class="logo">
               <a href="#0"> <img src="assets/img/LogoUcacIcamjpg.jpg" width="180" height="49" alt=""> </a>
             </div>
-            <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis nulla placerat amet amet congue.</p>
+            <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis nulla placerat amet amet
+              congue.</p>
             <ul class="socials">
               <li> <a href="#0"> <i class="lni lni-facebook-filled"></i> </a> </li>
               <li> <a href="#0"> <i class="lni lni-twitter-filled"></i> </a> </li>
@@ -81,7 +83,8 @@
       </div>
     </div>
     <div class="copyright-wrapper wow fadeInUp" data-wow-delay=".2s">
-      <p>Design and Developed by <a href="https://uideck.com" rel="nofollow" target="_blank">UIdeck</a> Built-with <a href="#">Lindy UI Kit</a></p>
+      <p>Design and Developed by <a href="https://uideck.com" rel="nofollow" target="_blank">UIdeck</a> Built-with <a
+          href="#">Lindy UI Kit</a></p>
     </div>
   </div>
 </footer>
