--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,23 +1,18 @@
 <!-- ========================= hero-2 start ========================= -->
-<section id="home" class="hero-section-wrapper-2">
+<section id="home" class="hero-section-wrapper-2" style="overflow: hidden;">
   <div class="hero-section hero-style-2">
-    <div class="container">
-      <div class="row align-items-end">
-        <div class="col-lg-6">
+    <div class="" style="background: url(assets/img/Etudiants.png) no-repeat center/cover;">
+      <div class="row align-items-center">
+        <div class="" style="text-align: center;">
           <div class="hero-content-wrapper">
             <!--<h2 class="mb-30 wow fadeInUp" data-wow-delay=".4s">&nbsp;</h2>-->
             <!--<h2 class="mb-30 wow fadeInUp" data-wow-delay=".4s">&nbsp;</h2>-->
             <h4 class="wow fadeInUp" data-wow-delay=".2s">Bienvenue sur votre espace d'inscription</h4>
 
-            <div class="buttons">
-              <a [routerLink]="['/register']"  rel="nofollow" class="button button-lg radius-10 wow fadeInUp" data-wow-delay=".7s">Inscrivez-vous maintenant</a>
+            <div class="buttons justify-content-center">
+              <a [routerLink]="['/register']" rel="nofollow" class="button button-lg radius-10 wow fadeInUp"
+                data-wow-delay=".7s">Inscrivez-vous maintenant</a>
             </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="hero-image">
-            <img src="assets/img/Etudiants.png" style="border-radius: 100px;" width="400px" height="300px" alt="" class="text-center wow fadeInRight" data-wow-delay=".2s">
-            <!--<img src="assets/img/hero/hero-2/paattern.svg" alt="" class="shape shape-1">-->
           </div>
         </div>
       </div>
